feat: Introduce image optimization and conversion scripts, add new image assets, and update HTML references to reflect image format changes.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" as="image" href="images/bg_1.jpg">
+    <link rel="preload" as="image" href="images/logo/brandname.png">
 
     <link
         href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700;900&family=Inter:wght@300;400;500;600;700&display=swap"
