--- a/services.html
+++ b/services.html
@@ -176,7 +176,7 @@
                 <div class="col-md-6 ftco-animate">
                     <div class="img"
                         style="height: 400px; background-size: cover; background-position: center; border-radius: 10px"
-                        data-bg="images/beach.png">
+                        data-bg="images/beach.jpg">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -233,7 +233,7 @@
                 <div class="col-md-6 ftco-animate">
                     <div class="img"
                         style="height: 400px; background-size: cover; background-position: center; border-radius: 10px"
-                        data-bg="images/teaplantation.png">
+                        data-bg="images/teaplantation.jpg">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -295,7 +295,7 @@
                 <div class="col-md-6 ftco-animate">
                     <div class="img"
                         style="height: 400px; background-size: cover; background-position: center; border-radius: 10px"
-                        data-bg="images/airport.png">
+                        data-bg="images/airport.jpg">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
@@ -326,7 +326,7 @@
                 <div class="col-md-6 ftco-animate order-md-last">
                     <div class="img"
                         style="height: 400px; background-size: cover; background-position: center; border-radius: 10px"
-                        data-bg="images/taxi2.png">
+                        data-bg="images/taxi2.jpg">
                     </div>
                 </div>
                 <div class="col-md-6 ftco-animate">
